@@ -92,9 +92,9 @@ public class CrowdStrikeExecutorService implements Runnable {
   public void run() {
     log.info("Running CrowdStrike executor endpoints gathering...");
     List<CrowdStrikeDevice> devices =
-        this.client.devices().getResources().stream().toList().stream()
+        this.client.devices().getResources().stream()
             .filter(device -> device.getHostname() != null)
-            .collect(Collectors.toList());
+            .toList();
     List<AgentRegisterInput> endpointRegisterList = toAgentEndpoint(devices);
     log.info(
         "CrowdStrike executor provisioning based on " + endpointRegisterList.size() + " assets");
